--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div id="gotop">^</div>
   <br>
-	@2015 Pithy Theme by Pawpaw.
+  &copy; 2015 <a href="https://twitter.com/tnantoka">tnantoka</a>
 </footer>
