--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,6 @@
   <div id="gotop">^</div>
   <br>
   &copy; 2015 <a href="https://twitter.com/tnantoka">tnantoka</a>
+  <br>
+  Powered by <a href="https://jekyllrb.com/">Jekyll</a>-<a href="https://github.com/smallmuou/Jekyll-Pithy">Pithy</a>.
 </footer>
