--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     
     <script src="/scripts/jquery-1.11.2.min.js"></script>
     <script src="/scripts/pithy.js"></script>
+    <script src="/scripts/sortable.min.js"></script>
     {% if site.safe %}
       <script id="dsq-count-scr" src="//swiftaweek.disqus.com/count.js" async></script>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
