--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div id="gotop">^</div>
   <br>
-  &copy; 2015 <a href="https://twitter.com/tnantoka">tnantoka</a>
+  &copy; 2015 - 2016 <a href="https://twitter.com/tnantoka">tnantoka</a>
   <br>
   Powered by <a href="https://jekyllrb.com/">Jekyll</a>-<a href="https://github.com/smallmuou/Jekyll-Pithy">Pithy</a>.
 </footer>
