--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,17 @@
     <script src="/scripts/pithy.js"></script>
     <script src="/scripts/sortable.min.js"></script>
     {% if site.safe %}
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-77904910-1', 'auto');
+        ga('send', 'pageview');
+
+      </script>
+
       <script id="dsq-count-scr" src="//swiftaweek.disqus.com/count.js" async></script>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     {% endif %}
