--- a/works/IllusionOfLife/IllusionOfLife/Base.lproj/Main.storyboard
+++ b/works/IllusionOfLife/IllusionOfLife/Base.lproj/Main.storyboard
@@ -18,30 +18,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXj-wS-C2c">
-                                <rect key="frame" x="20" y="563" width="335" height="84"/>
+                                <rect key="frame" x="20" y="525" width="335" height="122"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kXk-7h-EUp">
-                                        <rect key="frame" x="100" y="48" width="135" height="30"/>
-                                        <state key="normal" title="Squash and Stretch"/>
-                                        <connections>
-                                            <action selector="squashDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pj5-lw-oja"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJR-Ij-cdt">
-                                        <rect key="frame" x="148" y="10" width="39" height="30"/>
+                                        <rect key="frame" x="148" y="8" width="39" height="30"/>
                                         <state key="normal" title="Jump"/>
                                         <connections>
                                             <action selector="jumpDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x1E-8x-DCG"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJE-2c-jOb">
+                                        <rect key="frame" x="126" y="84" width="82" height="30"/>
+                                        <state key="normal" title="Anticipation"/>
+                                        <connections>
+                                            <action selector="anticipationDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QSM-he-tpo"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kXk-7h-EUp">
+                                        <rect key="frame" x="100" y="46" width="135" height="30"/>
+                                        <state key="normal" title="Squash and Stretch"/>
+                                        <connections>
+                                            <action selector="squashDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pj5-lw-oja"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="84" id="Y9G-Ma-Lm2"/>
+                                    <constraint firstAttribute="height" constant="122" id="Y9G-Ma-Lm2"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pZ-tV-Pym" customClass="SKView">
-                                <rect key="frame" x="20" y="28" width="335" height="527"/>
+                                <rect key="frame" x="20" y="28" width="335" height="489"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -51,16 +58,10 @@
                             <constraint firstItem="9pZ-tV-Pym" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="Ezc-zU-Vlv"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MXj-wS-C2c" secondAttribute="bottom" constant="20" id="F44-LQ-Zu0"/>
                             <constraint firstItem="9pZ-tV-Pym" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="J8P-bN-PpI"/>
-                            <constraint firstItem="MXj-wS-C2c" firstAttribute="top" secondItem="9pZ-tV-Pym" secondAttribute="bottom" constant="8" id="NCj-es-giL"/>
                             <constraint firstAttribute="trailing" secondItem="MXj-wS-C2c" secondAttribute="trailing" constant="20" id="NOR-LI-CH7"/>
                             <constraint firstItem="MXj-wS-C2c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="Q5y-nY-u77"/>
                             <constraint firstAttribute="trailing" secondItem="9pZ-tV-Pym" secondAttribute="trailing" constant="20" id="pGJ-TS-NHa"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="NCj-es-giL"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
